--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    <link rel="stylesheet" href="/package.web.html/package.web.css/style.css">
+    <link rel="stylesheet" href="./package.web.html/package.web.css/style.css">
     <title>Fectum | Technology</title>
 </head>
 <body>
@@ -75,16 +75,16 @@
     <input type="radio" name="radio-btn" id="radio3">
     <input type="radio" name="radio-btn" id="radio4">  
     <div class="slide first">
-      <img src="/package.web.img/body-background05.jpg" alt="">
+      <img src="./package.web.img/body-background05.jpg" alt="">
     </div>
     <div class="slide">
-      <img src="/package.web.img/body-background06.jpg" alt="">
+      <img src="./package.web.img/body-background06.jpg" alt="">
     </div>
     <div class="slide">
-      <img src="/package.web.img/body-background07.jpg" alt="">
+      <img src="./package.web.img/body-background07.jpg" alt="">
     </div>
     <div class="slide">
-      <img src="/package.web.img/body-background08.jpg" alt="">
+      <img src="./package.web.img/body-background08.jpg" alt="">
     </div>
     <div class="navigation-auto">
       <div class="auto-btn1"></div>
