--- a/education.html
+++ b/education.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-  <link rel="stylesheet" href="/package.web.html/package.web.css/style.css">
+  <link rel="stylesheet" href="./package.web.html/package.web.css/style.css">
   <title>Education</title>
 </head>
 <body>
@@ -84,7 +84,7 @@
     </ul>
   </div>
 <div class="sblock-2">
-  <img src="/package.web.img/body-background12.jpg">
+  <img src="./package.web.img/body-background12.jpg">
   <h2>Our Services for the Students</h2>
   <small>Join it Now</small>
 </div>
