--- a/Transport.html
+++ b/Transport.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.1.0-10/css/all.css" integrity="sha512-Dj9pt3sZROOuTTs9S89ykGZeu1XQgWKg3DVpu5tZALApsrWdd3tnVjTclUuVONaHM4O8GgCnjSbHlTKXrd2OWg==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/package.web.html/package.web.css/style.css">
+    <link rel="stylesheet" href="./package.web.html/package.web.css/style.css">
     <title>Travel & Transport</title>
 </head>
 <body>
@@ -85,7 +85,7 @@
         </ul>
       </div>  
     <div class="sblock-2">
-      <img src="/package.web.img/body-background17.jpg">
+      <img src="./package.web.img/body-background17.jpg">
       <h1>Driving Automation Systems Validation</h1>
       <p>Fully autonomous driving, one of the key outcomes of Intelligent Industry, is on its way. But the journey is still long and complex. Achieving acceptable levels of safety and reliability will need substantial verification and validation activity – requiring billions of kilometres of road tests, generating big data at scales rarely seen, and requiring infrastructure and analytics to process it.</p>
     </div>
