--- a/Ecommerce.html
+++ b/Ecommerce.html
@@ -6,9 +6,7 @@
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.1.0-10/css/all.css" integrity="sha512-Dj9pt3sZROOuTTs9S89ykGZeu1XQgWKg3DVpu5tZALApsrWdd3tnVjTclUuVONaHM4O8GgCnjSbHlTKXrd2OWg==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/package.web.html/package.web.css/style.css">
-    <link rel="stylesheet" href="/package.web.html/package.web.css/HealthCare.css">
-    <link rel="stylesheet" href="/package.web.html/package.web.css/Transport.css">
+    <link rel="stylesheet" href="./package.web.html/package.web.css/style.css">
     <title>E-Commerce</title>
 </head>
 <body>
@@ -89,7 +87,7 @@
         </ul>
       </div>  
     <div class="sblock-2">
-      <img src="/package.web.img/body-background18.jpg">
+      <img src="./package.web.img/body-background18.jpg">
       <h2>Build your own Ecommerce website with Fectum.</h2>
     </div>
     </section>
