--- a/Deployment.html
+++ b/Deployment.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.1.0-10/css/all.css" integrity="sha512-Dj9pt3sZROOuTTs9S89ykGZeu1XQgWKg3DVpu5tZALApsrWdd3tnVjTclUuVONaHM4O8GgCnjSbHlTKXrd2OWg==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/package.web.html/package.web.css/style.css">
+    <link rel="stylesheet" href="./package.web.html/package.web.css/style.css">
     <title>Deployment</title>
 </head>
 <body>
