--- a/AboutUs.html
+++ b/AboutUs.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css">
-        <link rel="stylesheet" href="/package.web.html/package.web.css/style.css">
+        <link rel="stylesheet" href="./package.web.html/package.web.css/style.css">
         <title>Company profile</title>
     </head>
 <body>
